Solve q2p2